--- a/project/tutorias/.env
+++ b/project/tutorias/.env
@@ -1,4 +1,4 @@
 
-MONGODB_URI="mongodb+srv://hnorecio:Filipenses48@cluster0.xiwaxdd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGODB_URI="mongodb+srv://hnorecio:contraseña@cluster0.xiwaxdd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 
 REACT_APP_SOCKET_SERVER="http://localhost:8001"
